# risc0mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  package-lock.json  package.json  paper.tex  setup.sh  test_dynamic_rust.rs  tsconfig.json
examples/: README.md  hash_verify.rs  k_means_clustering.rs  linear_regression.rs  merkle_proof.rs  neural_network.rs  sum_array.rs  test_examples.js
risc0-addition/: Cargo.toml
risc0-addition/host/: Cargo.toml
risc0-addition/host/src/: main.rs
risc0-addition/methods/: Cargo.toml
risc0-addition/methods/guest/: Cargo.toml
risc0-addition/methods/guest-multiply/: Cargo.toml
risc0-addition/methods/guest-multiply/src/: main.rs
risc0-addition/methods/guest/src/: main.rs
risc0-addition/verify/src/: main.rs
risc0code/: .gitignore  Cargo.toml  regenerate_pubkey.rs
risc0code/host/: Cargo.toml
risc0code/host/src/: main.rs
risc0code/methods/: Cargo.toml
risc0code/methods/guest-dynamic-88ef2e6040a932cf/: Cargo.toml
risc0code/methods/guest-dynamic-88ef2e6040a932cf/src/: main.rs
risc0code/methods/guest-dynamic-b288f8dd5bcf0ccb/: Cargo.toml
risc0code/methods/guest-dynamic-b288f8dd5bcf0ccb/src/: main.rs
risc0code/methods/guest-k-means/: Cargo.toml
risc0code/methods/guest-linear-regression/: Cargo.toml
risc0code/methods/guest-logistic-regression/: Cargo.toml
risc0code/methods/guest-logistic-regression/src/: main.rs
risc0code/methods/guest-modexp/: Cargo.toml
risc0code/methods/guest-modexp/src/: main.rs
risc0code/methods/guest-multiply/src/: main.rs
risc0code/methods/guest-neural-network/: Cargo.toml
risc0code/methods/guest-neural-network/src/: main.rs
risc0code/methods/guest-range/: Cargo.toml
risc0code/methods/guest-range/src/: main.rs
risc0code/methods/guest-sqrt/: Cargo.toml
risc0code/methods/guest-sqrt/src/: main.rs
risc0code/methods/guest/src/: main.rs
risc0code/methods/guest_authenticated_add/: Cargo.toml
risc0code/methods/guest_authenticated_add/src/: main.rs
risc0code/server/: Cargo.toml
risc0code/verify/: Cargo.toml
risc0code/verify/src/: main.rs
scripts/: encrypt-keys.ts
src/: index.ts  server.ts  tool-definitions.ts  types.ts  utils.ts
src/crypto/: key-manager.ts
src/llm-agents/: base-agent.ts  communication-hub.ts  comprehensive-test-client.ts  individual-test-client.ts  main.ts  proper-mcp-agent.ts  prover-agent.ts  prover-client.ts  verifier-agent.ts  verifier-server.ts
src/operations/: basic-operations.ts  dynamic-operations.ts  math-operations.ts  proof-operations.ts
test_samples/: factorial.rs
