[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "^2.3.1" }

[package.metadata.risc0]
methods = ["guest", "guest-multiply", "guest-sqrt", "guest-modexp", "guest-range", "guest_authenticated_add", "guest-k-means", "guest-linear-regression", "guest-neural-network"]
