[package]
name = "risc0-zkvm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-cors = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RISC Zero
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.3.1" }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Process execution
tokio-process = "0.2"

[build-dependencies]
risc0-build = { version = "^2.3.1" }