[package]
name = "guest-dynamic-b288f8dd5bcf0ccb"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.3.1", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "guest-dynamic-b288f8dd5bcf0ccb"
path = "src/main.rs"

[workspace]
# Empty workspace to prevent conflicts with parent workspace
