[package]
name = "guest_authenticated_add"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.3.1", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[[bin]]
name = "guest_authenticated_add"
path = "src/main.rs"